# solara-test

./: README.md  pyproject.toml
src/solara_test/: server.py
src/solara_test/pages/: __init__.py  page2.py
